# snake-game

./: .gitignore  Cargo.toml  README.md  build-wasm.sh  netlify.toml  package-lock.json  package.json
pkg/: snake_game.js
server/: index.js
src/: lib.rs
www/: .gitignore  bootstrap.js  index.html  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
www/public/: 434.bootstrap.js  bootstrap.js  index.html  index_ts.bootstrap.js
www/public/pkg/: snake_game.d.ts  snake_game.js  snake_game_bg.wasm.d.ts
www/public/pkg/snippets/snake_game-027f5cd2d64d2885/www/utils/: rnd.ts
